fixing long number overlap in proposal and hidden button on contact form

--- a/src/css/fln/fln-proposal.scss
+++ b/src/css/fln/fln-proposal.scss
@@ -31,6 +31,7 @@
   color: $green;
   border-radius: 2px;
   .col.third.padded.padded {
+    overflow: hidden;
     padding-bottom: .5em;
     border-bottom: 2px solid $grey-lightest;
   }
